# noprep-manager

./: .env-example  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: manage.py  urls.py
src/apps/drivers/: admin.py  apps.py  enums.py  forms.py  models.py
src/apps/drivers/fixtures/: initial_data.json
src/apps/drivers/migrations/: 0001_initial.py  0002_alter_driver_cba_number_driver_unique_cba_number.py  0002_initial.py
src/apps/events/: admin.py  apps.py  forms.py  models.py  subscribe.html  views.py
src/apps/events/fixtures/: initial_data.json
src/apps/events/migrations/: 0001_initial.py  0002_rename_end_time_event_ends_at_remove_event_star_time_and_more.py
src/apps/user_profiles/: admin.py  apps.py  forms.py  models.py
src/apps/user_profiles/fixtures/: initial_data.json
src/apps/user_profiles/migrations/: 0001_initial.py
src/apps/users_profiles/: admin.py  apps.py  forms.py
src/apps/users_profiles/migrations/: 0001_initial.py
src/common/django_framework/: __init__.py  mixins.py  models.py
src/common/helpers/enums/: __init__.py  base.py  cities_states.py
src/common/helpers/schemas/: base.py
src/common/helpers/utils/: hash.py
src/common/helpers/utils/tests/: test_hash.py
src/core/: asgi.py  routers.py  wsgi.py
src/core/settings/: __init__.py  base.py  development.py
